Add Effects Explode

--- a/qml.qrc
+++ b/qml.qrc
@@ -11,5 +11,7 @@
         <file>res/qml/pages/qmldir</file>
         <file>res/qml/datamodels/cell_datamodel.qml</file>
         <file>res/qml/datamodels/levels_datamodel.qml</file>
+        <file>res/qml/effects/explosion.qml</file>
+        <file>res/qml/effects/qmldir</file>
     </qresource>
 </RCC>
