--- a/images.qrc
+++ b/images.qrc
@@ -23,6 +23,7 @@
         <file>res/images/backgrounds/bgr18.jpg</file>
         <file>res/images/backgrounds/bgr19.jpg</file>
         <file>res/images/backgrounds/bgr20.jpg</file>
+        <file>res/images/particle.png</file>
     </qresource>
     <qresource prefix="/effects"/>
 </RCC>
