--- a/qml.qrc
+++ b/qml.qrc
@@ -14,5 +14,6 @@
         <file>res/qml/effects/explosion.qml</file>
         <file>res/qml/effects/qmldir</file>
         <file>res/qml/common/basebutton.qml</file>
+        <file>res/qml/common/tile.qml</file>
     </qresource>
 </RCC>
