--- a/images.qrc
+++ b/images.qrc
@@ -26,6 +26,7 @@
         <file>res/images/particle.png</file>
         <file>res/images/play.svg</file>
         <file>res/images/setup.svg</file>
+        <file>res/images/delight_logo.png</file>
     </qresource>
     <qresource prefix="/effects"/>
 </RCC>
