--- a/qml.qrc
+++ b/qml.qrc
@@ -6,13 +6,17 @@
         <file>res/qml/common/app_singleton.qml</file>
         <file>res/qml/common/app_ver_txt.qml</file>
         <file>res/qml/common/fade_stack_layout.qml</file>
-        <file>res/qml/common/basebutton.qml</file>
         <file>res/qml/common/tile.qml</file>
         <file>res/qml/common/mydebugrect.qml</file>
         <file>res/qml/common/img_button.qml</file>
         <file>res/qml/pages/qmldir</file>
         <file>res/qml/pages/game_page.qml</file>
-        <file>res/qml/effects/qmldir</file>
-        <file>res/qml/effects/explosion.qml</file>
+        <file>res/qml/common/base_button.qml</file>
+        <file>res/qml/pages/init_page.qml</file>
+        <file>res/qml/common/logo_item.qml</file>
+        <file>res/qml/effects/shine/qmldir</file>
+        <file>res/qml/effects/shine/shine.qml</file>
+        <file>res/qml/effects/explosion/explosion.qml</file>
+        <file>res/qml/effects/explosion/qmldir</file>
     </qresource>
 </RCC>
